test/fails/bad_functions/extern6.lgl
declare int f(int x);

int f(int x) { // Can't be overloaded
    return x;
}

void main() {
    print f();
    return;
}